--- a/rhb registration/Controllers/Registration Complete/RegistrationCompleteViewController.xib
+++ b/rhb registration/Controllers/Registration Complete/RegistrationCompleteViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,112 +17,94 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a-1-splashScreen-top-banner" translatesAutoresizingMaskIntoConstraints="NO" id="TWg-kV-tpF">
-                    <rect key="frame" x="0.0" y="64" width="375" height="5"/>
+                    <rect key="frame" x="0.0" y="64" width="320" height="10"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="5" id="0G3-JP-FQC"/>
+                        <constraint firstAttribute="height" constant="10" id="0G3-JP-FQC"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8w4-bd-ifn">
-                    <rect key="frame" x="16" y="85" width="343" height="393"/>
+                    <rect key="frame" x="16" y="90" width="288" height="393"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thank You." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xJ-ab-2iC">
-                            <rect key="frame" x="8" y="8" width="327" height="30"/>
+                            <rect key="frame" x="8" y="8" width="272" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="75i-0w-eYA"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
-                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
+                            <color key="textColor" red="0.074509803920000006" green="0.36862745099999999" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5j-dE-TjI">
-                            <rect key="frame" x="8" y="46" width="327" height="75"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5j-dE-TjI">
+                            <rect key="frame" x="38.5" y="46" width="211" height="60"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="75" id="OyH-1m-Mwq"/>
+                                <constraint firstAttribute="width" constant="211" id="JoZ-ci-PcC"/>
+                                <constraint firstAttribute="height" constant="60" id="OyH-1m-Mwq"/>
                             </constraints>
-                            <string key="text">Terima kasih telah melakukan Registrasi pembukaan rekening RHB Sekuritas Indonesia. Info akun demo RHB TradeSmart Syariah Anda akan di kirimkan melalui email.</string>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <string key="text">Opening a RHB account is fast and simple. Fill all form field to go enjoy all features 
+in this application</string>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="11"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIs-NQ-EKI">
-                            <rect key="frame" x="8" y="129" width="327" height="94"/>
+                            <rect key="frame" x="8" y="106" width="272" height="75"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="94" id="NHR-Yd-gDs"/>
+                                <constraint firstAttribute="height" constant="75" id="NHR-Yd-gDs"/>
                             </constraints>
-                            <string key="text">Kami akan melakukan review terhadap data anda dalam waktu maksimal 3x24 jam. Kami akan memberikan notifikasi kepada Anda jika pendaftaran Anda berhasil dan nomor RDN Anda telah terdaftar.</string>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <string key="text">Terima kasih telah melakukan Pra Registrasi pembukaan rekening RHB Sekuritas Indonesia. Info akun demo RHB TradeSmart Syariah Anda telah dikirimkan melalui email.</string>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
                             <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sementara itu Anda bisa menikmati seluruh fitur pada aplikasi RHB Syariah ini." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXY-Vr-Q7V">
-                            <rect key="frame" x="8" y="231" width="327" height="44"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXY-Vr-Q7V">
+                            <rect key="frame" x="16.5" y="189" width="255" height="130"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="44" id="xFm-zr-QW6"/>
+                                <constraint firstAttribute="width" constant="255" id="YGY-64-BG2"/>
+                                <constraint firstAttribute="height" constant="130" id="xFm-zr-QW6"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <string key="text">Agar dapat menggunakan seluruh fitur RHB TradeSmart Syariah, serta sesuai dengan peraturan Bursa Efek Indonesia, maka agar dapat
+menggunakan seluruh fitur aplikasi ini, anda diminta untuk membuat Rekening Efek dan Rekening Dana Investor agar menjadi Investor Aktif. 
+Tanpa biaya, dengan cukup mengisi seluruh kelengkapan data yang ada</string>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
                             <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terima Kasih" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vz2-7g-F98">
-                            <rect key="frame" x="8" y="283" width="327" height="20"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Siapkan E-KTP, NPWP (jika ada) serta Buku Tabungan Anda untuk melakukan pengisian data platform ini." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="er8-EK-GGm">
+                            <rect key="frame" x="-6" y="327" width="300" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="20" id="adh-8i-oFf"/>
+                                <constraint firstAttribute="width" constant="300" id="bYz-ON-Z8v"/>
+                                <constraint firstAttribute="height" constant="40" id="yB1-X2-NTd"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="9-1-rhb-logo" translatesAutoresizingMaskIntoConstraints="NO" id="MaY-Ko-Gaa">
-                            <rect key="frame" x="121" y="327" width="101" height="49"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="49" id="aHo-9H-sTk"/>
-                                <constraint firstAttribute="width" constant="101" id="qLc-WF-1Le"/>
-                            </constraints>
-                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="Vz2-7g-F98" secondAttribute="trailing" constant="8" id="0l8-mj-b2S"/>
                         <constraint firstItem="XXY-Vr-Q7V" firstAttribute="top" secondItem="WIs-NQ-EKI" secondAttribute="bottom" constant="8" id="BIz-t4-BSX"/>
-                        <constraint firstItem="MaY-Ko-Gaa" firstAttribute="centerX" secondItem="8w4-bd-ifn" secondAttribute="centerX" id="BPq-xs-Mja"/>
                         <constraint firstItem="9xJ-ab-2iC" firstAttribute="leading" secondItem="8w4-bd-ifn" secondAttribute="leading" constant="8" id="Et6-tx-rCv"/>
                         <constraint firstAttribute="height" constant="393" id="Htd-4Q-qcO"/>
-                        <constraint firstItem="MaY-Ko-Gaa" firstAttribute="top" secondItem="Vz2-7g-F98" secondAttribute="bottom" constant="24" id="IkA-px-phH"/>
+                        <constraint firstItem="XXY-Vr-Q7V" firstAttribute="centerX" secondItem="8w4-bd-ifn" secondAttribute="centerX" id="L0C-hw-GoX"/>
+                        <constraint firstItem="er8-EK-GGm" firstAttribute="top" secondItem="XXY-Vr-Q7V" secondAttribute="bottom" constant="8" id="QHY-zd-yfi"/>
                         <constraint firstAttribute="trailing" secondItem="WIs-NQ-EKI" secondAttribute="trailing" constant="8" id="QIS-3c-L8m"/>
                         <constraint firstAttribute="trailing" secondItem="9xJ-ab-2iC" secondAttribute="trailing" constant="8" id="REI-dK-Sw8"/>
-                        <constraint firstAttribute="trailing" secondItem="P5j-dE-TjI" secondAttribute="trailing" constant="8" id="YCY-Pd-a6r"/>
                         <constraint firstItem="WIs-NQ-EKI" firstAttribute="leading" secondItem="8w4-bd-ifn" secondAttribute="leading" constant="8" id="cmb-tY-kPA"/>
                         <constraint firstItem="9xJ-ab-2iC" firstAttribute="top" secondItem="8w4-bd-ifn" secondAttribute="top" constant="8" id="fmC-hU-wcY"/>
-                        <constraint firstAttribute="trailing" secondItem="XXY-Vr-Q7V" secondAttribute="trailing" constant="8" id="h9p-VK-khl"/>
                         <constraint firstItem="P5j-dE-TjI" firstAttribute="top" secondItem="9xJ-ab-2iC" secondAttribute="bottom" constant="8" id="hbJ-bx-h9b"/>
-                        <constraint firstItem="Vz2-7g-F98" firstAttribute="leading" secondItem="8w4-bd-ifn" secondAttribute="leading" constant="8" id="l0w-nB-ptw"/>
-                        <constraint firstItem="XXY-Vr-Q7V" firstAttribute="leading" secondItem="8w4-bd-ifn" secondAttribute="leading" constant="8" id="l9T-Hz-bFY"/>
-                        <constraint firstItem="WIs-NQ-EKI" firstAttribute="top" secondItem="P5j-dE-TjI" secondAttribute="bottom" constant="8" id="led-wq-Rtc"/>
-                        <constraint firstItem="P5j-dE-TjI" firstAttribute="leading" secondItem="8w4-bd-ifn" secondAttribute="leading" constant="8" id="nVg-Rl-6dH"/>
-                        <constraint firstItem="Vz2-7g-F98" firstAttribute="top" secondItem="XXY-Vr-Q7V" secondAttribute="bottom" constant="8" id="yAL-op-YPS"/>
+                        <constraint firstItem="WIs-NQ-EKI" firstAttribute="top" secondItem="P5j-dE-TjI" secondAttribute="bottom" id="led-wq-Rtc"/>
+                        <constraint firstItem="er8-EK-GGm" firstAttribute="centerX" secondItem="8w4-bd-ifn" secondAttribute="centerX" id="nAK-5q-sKz"/>
+                        <constraint firstItem="P5j-dE-TjI" firstAttribute="centerX" secondItem="8w4-bd-ifn" secondAttribute="centerX" id="uGo-0f-r0h"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AZF-a5-FIw">
-                    <rect key="frame" x="24" y="494" width="327" height="45"/>
-                    <color key="backgroundColor" red="0.17254901959999999" green="0.44705882349999998" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="FUt-bq-8ER"/>
-                    </constraints>
-                    <state key="normal" title="CONTINUE">
-                        <color key="titleColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="AZF-a5-FIw" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="24" id="1W9-a1-252"/>
                 <constraint firstItem="TWg-kV-tpF" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="2uN-gs-8Xz"/>
-                <constraint firstItem="AZF-a5-FIw" firstAttribute="top" secondItem="8w4-bd-ifn" secondAttribute="bottom" constant="16" id="510-K9-YoT"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="AZF-a5-FIw" secondAttribute="trailing" constant="24" id="DXf-tR-jmR"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="8w4-bd-ifn" secondAttribute="trailing" constant="16" id="Lay-bg-qZV"/>
                 <constraint firstItem="TWg-kV-tpF" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="Ldn-3H-0ZI"/>
                 <constraint firstItem="8w4-bd-ifn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="WpM-gB-Qbr"/>
@@ -135,7 +117,6 @@
         </view>
     </objects>
     <resources>
-        <image name="9-1-rhb-logo" width="250" height="80"/>
         <image name="a-1-splashScreen-top-banner" width="720" height="26"/>
     </resources>
 </document>
